--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.22.0",
+    "bootstrap": "5.1.3",
     "firebase": "^9.1.1",
     "js-cookie": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.11.0",
     "sweetalert2": "^11.1.8",
     "web-vitals": "^1.0.1"
   },
