--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     ],
     "rules": {
       "prettier/prettier": ["error", { "endOfLine": "auto" }],
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "no-console": "off"
     }
 }
