--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.22.0",
     "bootstrap": "5.1.3",
     "firebase": "^9.1.1",
+    "gsap": "^3.8.0",
     "js-cookie": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
+    "react-gsap": "^3.2.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
